fixed hero screen image on small desktop screens

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2144,9 +2144,9 @@ main {
 
 @media (max-height: 780px) {
   .main-screen__image {
-    height: 400px;
+    height: 500px;
     object-fit: contain;
-    margin-left: -12%;
+    margin-left: -13%;
   }
   .main-screen__title span {
     font-size: 66px;
